1 file modified, 1 added, 1 deleted

--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
             <label for="city">City</label>
             <input type="text" id="city" />
           </div>
-          <button type="submit">Submit</button>
+          <button id="form" type="submit" class="send-people">Submit</button>
           <button type="reset" class="people-add__cancel">Cancel</button>
 				</form>
+        <p id="log"></p>
 			</div>
 		</main>
 		<div>
